@@ -9,6 +9,8 @@ Version 6.0.9 - not yet released
   - fix for hanging map on slow hardware
 * Windows
   - fix setting the system time from GPS
+* Android
+  - don't require GPS and Bluetooth on Android Market
 
 Version 6.0.8 - 2011/03/23
 * don't estimate thermal source for skewed thermals
